--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     </div>
 
     <div class="answer_container">
-        <div class="answer"><button class="button answer_a">Answer A</button></div>
-        <div class="answer"><button class="button answer_b">Answer B</button></div>
-        <div class="answer"><button class="button answer_c">Answer C</button></div>
-        <di class="answer"><button class="button answer_d">Answer D</button></div>
+        <div class="answer"><button class="button answer_a answer">Answer A</button></div>
+        <div class="answer"><button class="button answer_b answer">Answer B</button></div>
+        <div class="answer"><button class="button answer_c answer">Answer C</button></div>
+        <di class="answer"><button class="button answer_d answer">Answer D</button></div>
     </div>
 
     <div class="next_button_container">
-        <button class="answer small_button">Lösung</button>
-        <button class="next small_button">Weiter</button>
+        <button class="answer small_button button">Lösung</button>
+        <button class="next small_button button">Weiter</button>
     </div>
     <script src="./script.js"></script>
   </body>
